force-app/main/default/objects/CatalogElement__c/CatalogElement__c.object-meta.xml
<CustomObject>
    <description>[###][CatalogElement__c] Elementos de Catálogo de Preços, para montar a hierarquia</description>
    <label>Elemento de Catálogo</label>
    <nameField>
        <label>Nome do Elemento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elementos de Catálogo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>