force-app/main/default/objects/CatalogElement__c/fields/CustomIdTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIdTxt__c</fullName>
    <externalId>true</externalId>
    <label>ID Customizado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>