force-app/main/default/objects/CatalogElement__c/fields/ElementDescriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>ElementDescriptionTxt__c</fullName>
    <label>Descrição do Elemento</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>