force-app/main/default/objects/CatalogElement__c/fields/Image2Fml__c.field-meta.xml
<CustomField>
    <fullName>Image2Fml__c</fullName>
    <formula>IMAGE(ImageFml__c, &quot;test&quot;, 80, 80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem2</label>
    <type>Text</type>
</CustomField>