force-app/main/default/objects/CatalogElement__c/fields/ImageFml__c.field-meta.xml
<CustomField>
    <fullName>ImageFml__c</fullName>
    <formula>&quot;/servlet/servlet.FileDownload?file=&quot;&amp;ImageIdTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem</label>
    <type>Text</type>
</CustomField>