force-app/main/default/objects/CatalogElement__c/fields/ImageIdTxt__c.field-meta.xml
<CustomField>
    <fullName>ImageIdTxt__c</fullName>
    <inlineHelpText>Cole o ID do documento que contém a imagem</inlineHelpText>
    <label>ID da Imagem</label>
    <length>32</length>
    <type>Text</type>
</CustomField>