force-app/main/default/objects/CatalogElement__c/fields/IndexNmb__c.field-meta.xml
<CustomField>
    <fullName>IndexNmb__c</fullName>
    <description>Indica a ordem que os elementos serão exibidos</description>
    <inlineHelpText>Ordem de exibição dos elementos no catálogo. Exibidos em ordem crescente, nulos por último</inlineHelpText>
    <label>Ordem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>