force-app/main/default/objects/CatalogElement__c/fields/NextElementLkp__c.field-meta.xml
<CustomField>
    <fullName>NextElementLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Próximo elemento em relação à ordem definida no catálogo, entre os irmãos do elemento atual. Preenchido via trigger</description>
    <label>Próximo Elemento</label>
    <referenceTo>CatalogElement__c</referenceTo>
    <relationshipLabel>Elementos Anteriores</relationshipLabel>
    <relationshipName>PreviousElements</relationshipName>
    <type>Lookup</type>
</CustomField>