force-app/main/default/objects/CatalogElement__c/fields/NextElementNameFml__c.field-meta.xml
<CustomField>
    <fullName>NextElementNameFml__c</fullName>
    <formula>NextElementLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Próximo Elemento</label>
    <type>Text</type>
</CustomField>