force-app/main/default/objects/CatalogElement__c/fields/ParentElementLkp__c.field-meta.xml
<CustomField>
    <fullName>ParentElementLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elemento Pai</label>
    <referenceTo>CatalogElement__c</referenceTo>
    <relationshipLabel>Elementos Filhos</relationshipLabel>
    <relationshipName>ChildElements</relationshipName>
    <type>Lookup</type>
</CustomField>