force-app/main/default/objects/CatalogElement__c/fields/PreviousElementLkp__c.field-meta.xml
<CustomField>
    <fullName>PreviousElementLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vide Próximo Elemento</description>
    <label>Elemento Anterior</label>
    <referenceTo>CatalogElement__c</referenceTo>
    <relationshipLabel>Próximos Elementos</relationshipLabel>
    <relationshipName>NextElements</relationshipName>
    <type>Lookup</type>
</CustomField>