force-app/main/default/objects/CatalogElement__c/fields/PreviousElementNameFml__c.field-meta.xml
<CustomField>
    <fullName>PreviousElementNameFml__c</fullName>
    <formula>PreviousElementLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Elemento Anterior</label>
    <type>Text</type>
</CustomField>