force-app/main/default/objects/CatalogElement__c/fields/PricebookLkp__c.field-meta.xml
<CustomField>
    <fullName>PricebookLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catálogo de Preços</label>
    <referenceTo>Pricebook__c</referenceTo>
    <relationshipLabel>Elementos de Catálogo</relationshipLabel>
    <relationshipName>CatalogElements</relationshipName>
    <type>Lookup</type>
</CustomField>